# learn

./: .gitignore  README.md  pyproject.toml
agentscope/: .env.example  README.md  stage-1.md  stage-2.md  stage-3.md  stage-4.md  stage-5.md  stage-6.md  stage-7.md
agentscope/_shared/: audit_middleware.py  env.py  runtime.py
agentscope/lab/: README.md
agentscope/notes/: agentscope-architecture.md
agentscope/showcase/: README.md
agentscope/stage-1/: 01_agentscope_concepts.py  02_msg_blocks.py  03_react_loop_simulator.py  04_event_stream_concepts.py  05_vs_langchain_openharness.py  06_stage1_final.py
agentscope/stage-2/: 01_toolkit_concepts.py  02_function_tool_schema.py  03_builtin_tools_catalog.py  04_middleware_audit_sim.py  05_permission_sim.py  06_readonly_tool_pattern.py  07_stage2_final.py
agentscope/stage-3/: 01_model_providers.py  02_agent_state.py  03_openai_compatible.py  04_compression_concepts.py  05_stage3_final.py
agentscope/stage-4/: 01_multi_agent_patterns.py  02_sequential_handoff_sim.py  03_skill_concepts.py  04_observe_pattern.py  05_stage4_final.py
agentscope/stage-5/: 01_mcp_concepts.py  02_structured_output_concepts.py  03_stage5_final.py
agentscope/stage-6/: 01_tracing_concepts.py  02_bridge_contract.py  03_stage6_final.py
agentscope/stage-7/: 01_intentgate_contract.py  02_sse_bridge_sim.py  03_stage7_final.py
copilotkit/: .env.example  README.md  package.json  stage-01.md  stage-02.md  stage-03.md  stage-04.md  stage-05.md  stage-06.md  stage-07.md  tsconfig.json
copilotkit/notes/: ag-ui-stack.md  copilotkit-best-practices.md  generative-ui-patterns.md
copilotkit/shared/: types.ts
copilotkit/showcase/: README.md
docs/: README.md  tracks.md
langchain/: Java 程序员必备：Python 速查手册 (3).md  README.md  stage-1.md  stage-2.md
openharness/: .env.example  README.md  stage-1.md  stage-2.md  stage-3.md  stage-4.md  stage-5.md  stage-6.md  stage-7.md
python/: README.md  stage-1.md  stage-2.md  stage-3.md
(+227 files in other folders)
