[project]
name = "learn"
version = "0.1.0"
description = "多轨道分阶段学习（Python / LangChain 等；Node 轨道在各自子目录管理）"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

# Python 轨道共用依赖（python/、langchain/）。
# Node/TS 轨道（如 react/）在各自子目录使用 package.json，不在此文件声明。

[dependency-groups]
python-stage-1 = []
python-stage-2 = []
python-stage-3 = [
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
]
langchain-stage-1 = [
    "langchain>=1.2.0",
    "langchain-core>=1.0.0",
    "langchain-openai>=1.0.0",
    "langchain-anthropic>=1.0.0",
    "langchain-google-genai>=2.0.0",
    "langchain-deepseek>=0.0.0",
    "langchain-ollama>=1.0.0",
    "langchain-chroma>=0.2.0",
    "langchain-community>=0.3.0",
    "langchain-text-splitters>=0.3.0",
    "chromadb>=0.6.0",
    "tiktoken>=0.7.0",
    "python-dotenv>=1.0.0",
    "langgraph>=0.4.0",
    "langgraph-checkpoint-sqlite>=2.0.0",
]
langchain-stage-2 = [
    "langchain>=1.2.0",
    "langchain-core>=1.0.0",
    "langchain-openai>=1.0.0",
    "langgraph>=0.4.0",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "python-dotenv>=1.0.0",
]
openharness-stage-1 = [
    "python-dotenv>=1.0.0",
]
openharness-stage-2 = [
    "pydantic>=2.0.0",
]
openharness-stage-3 = [
    "pydantic>=2.0.0",
]
openharness-stage-4 = [
    "pydantic>=2.0.0",
]
openharness-stage-5 = [
    "pydantic>=2.0.0",
]
openharness-cli = [
    "openharness-ai>=0.1.0",
    "python-dotenv>=1.0.0",
]
openharness-showcase = [
    "pydantic>=2.0.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.24.0",
]
agentscope-core = [
    "agentscope>=2.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
]
agentscope-showcase = [
    "agentscope>=2.0.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.24.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
]

[tool.uv]
default-groups = ["langchain-stage-1"]
